@@ -602,3 +602,172 @@ for (i = 0, i < #unwound.result, i++) {
 ```
 
 no matter what the client sent us, we get the same result in a more general way! (btw: the interface will declare `string*` as param type)
+
+# Performance Benchmark
+
+## Setup
+
+A performance benchmark server was created in `benchmark/` to compare TQuery vs traditional nested loops for filtering deeply nested data.
+
+**Dataset**: 6.3 MB JSON file with structure similar to `companies.json`
+- 60 companies with 5 departments each
+- Each department has 4 teams with 4 projects each
+- Total: 4,800 projects across companies → departments → teams → projects → technologies
+- Generated with `benchmark/generate_data.py`
+
+**Test**: The benchmark runs multiple requests filtering projects by various combinations of `status` and `technology`
+- Example filters: `{status: "in_progress", technology: "Python"}`, `{status: "completed", technology: "Java"}`, etc.
+
+**Benchmark Scripts**:
+- `generate_data.py` - Generates test data
+- `test.py` - Runs individual benchmark tests
+- `run_all_benchmarks.py` - Automated benchmark runner
+
+## System Information
+
+```
+CPU: AMD Ryzen 9 7940HS w/ Radeon 780M Graphics (8 cores / 16 threads)
+Memory: 5.6 GB total
+Swap: 5.8 GB total
+OS: Debian GNU/Linux (kernel 6.12.48+deb13-amd64)
+Java: OpenJDK 64-Bit Server VM (build 21.0.8+9-Debian-1)
+```
+
+## How to Run
+
+### Automated Benchmark (Recommended)
+
+```bash
+# Run all benchmarks automatically
+python3 benchmark/run_all_benchmarks.py
+```
+
+### Manual Benchmark
+
+```bash
+cd benchmark
+
+# Generate test data
+python3 generate_data.py
+
+# Start server manually with JVM options (from tquery-matters root)
+cd ..
+java -Xmx500m -Xms500m \
+    -Xlog:gc*:file=/tmp/gc.log:time,uptime,level,tags \
+    -ea:jolie... -ea:joliex... \
+    -Djava.rmi.server.codebase=file://usr/lib/jolie/extensions/rmi.jar \
+    -cp /usr/lib/jolie/lib/libjolie.jar:/usr/lib/jolie/lib/automaton.jar:/usr/lib/jolie/lib/commons-text.jar:/usr/lib/jolie/lib/jolie-js.jar:/usr/lib/jolie/lib/json-simple.jar:/usr/lib/jolie/jolie.jar:/usr/lib/jolie/jolie-cli.jar \
+    jolie.Jolie \
+    -l ./lib/*:/usr/lib/jolie/lib:/usr/lib/jolie/javaServices/*:/usr/lib/jolie/extensions/* \
+    -i /usr/lib/jolie/include \
+    -p /usr/lib/jolie/packages \
+    benchmark/server.ol > /tmp/benchmark_server.log 2>&1 &
+
+# Run benchmark WITH TQuery (2 clients, 5 requests each)
+python3 benchmark/test.py 2 5 true
+
+# Run benchmark WITHOUT TQuery
+python3 benchmark/test.py 2 5 false
+
+# Check GC statistics
+grep -E "GC\([0-9]+\)" /tmp/gc.log | tail -10
+```
+
+### Command Explanations
+
+**Java Command Breakdown:**
+```bash
+java -Xmx500m -Xms500m \
+    -Xlog:gc*:file=/tmp/gc.log:time,uptime,level,tags \
+    -ea:jolie... -ea:joliex... \
+    -Djava.rmi.server.codebase=file://usr/lib/jolie/extensions/rmi.jar \
+    -cp /usr/lib/jolie/lib/libjolie.jar:... \
+    jolie.Jolie \
+    -l ./lib/*:... \
+    -i /usr/lib/jolie/include \
+    -p /usr/lib/jolie/packages \
+    benchmark/server.ol
+```
+
+- `-Xmx500m`: Maximum heap size = 500 MB. Limits how much memory the JVM can allocate for the heap.
+- `-Xms500m`: Initial heap size = 500 MB. Preallocates memory at startup to avoid resizing during execution.
+- `-Xlog:gc*:file=/tmp/gc.log:time,uptime,level,tags`: Enables detailed garbage collection logging. All GC events are written to `/tmp/gc.log` with timestamps, uptime, log level, and component tags.
+- `-ea:jolie...`: Enables Java assertions for packages matching "jolie*". Assertions are runtime checks used for debugging and validation.
+- `-Djava.rmi.server.codebase=file://usr/lib/jolie/extensions/rmi.jar`: Sets a JVM system property. RMI (Remote Method Invocation) uses this to locate classes for remote objects.
+- `-cp /usr/lib/jolie/lib/...`: Java classpath. Specifies where to find compiled Java classes and JAR libraries. Lists all JAR files needed to run Jolie (libjolie.jar, automaton.jar, jolie.jar, etc.).
+- `jolie.Jolie`: The fully-qualified name of the main Java class to execute (equivalent to `public static void main` entry point).
+- `-l ./lib/*:...`: Jolie library paths. Tells Jolie where to find additional libraries and extensions.
+- `-i /usr/lib/jolie/include`: Jolie include directory. Where Jolie looks for `.iol` interface files and other includes.
+- `-p /usr/lib/jolie/packages`: Jolie packages directory. Where Jolie looks for installed packages (e.g., `@jolie/tquery`).
+- `benchmark/server.ol`: The Jolie source file to execute.
+
+**GC Log Grep Command:**
+```bash
+grep -E "GC\([0-9]+\)" /tmp/gc.log | tail -10
+```
+
+This captures all lines containing "GC(N)" where N is a number, which are the main GC event summary lines. Example output:
+```
+[timestamp][info][gc] GC(280) Pause Full (G1 Compaction Pause) 499M->250M(500M) 60.651ms
+                      ^^^^^^^ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ^^^^^^^^^^^^^^^^ ^^^^^^^^
+                      Event#  GC type                          Before->After    Duration
+```
+
+The format shows: `<heap before GC> -> <heap after GC> (<total heap size>) <pause time>`
+
+## Results
+
+**Note on percentiles**: Percentiles indicate response time thresholds. For example:
+- **P50 (median)**: 50% of requests completed faster than this time
+- **P95**: 95% of requests completed faster than this time (only 5% were slower)
+- **P99**: 99% of requests completed faster than this time (only 1% were slower)
+
+### WITHOUT TQuery (500MB heap)
+
+```
+Configuration:
+  - Mode: WITHOUT TQuery
+  - Concurrent clients: 2
+  - Requests per client: 5
+  - Total requests: 10
+  - Errors: 0
+
+Timing Statistics (milliseconds):
+  - Min:  38ms
+  - Max:  130ms
+  - Avg:  95ms
+  - P50:  96ms
+  - P95:  130ms
+  - P99:  130ms
+
+Performance:
+  - Total time: 484ms
+  - Throughput: 20.66 req/sec
+```
+
+### WITH TQuery (500MB heap)
+
+```
+Status: TIMEOUT - Requests exceed 120s timeout
+Reason: TQuery creates large intermediate unwound data structures that
+        cause extensive garbage collection activity with limited heap
+
+The TQuery approach exhausts the 500MB heap due to:
+1. Unwinding 4,800 projects to deepest level creates many intermediate objects
+2. Each unwound record preserves full path context (companies → departments → teams → projects)
+3. Heap fills up faster than GC can reclaim memory
+4. Server enters GC thrashing (spending more time in GC than processing)
+```
+
+### Memory Usage Analysis (500MB heap)
+
+```
+GC Statistics during TQuery execution (from /tmp/gc.log):
+[2025-10-10T18:34:10.229+0200][127.747s][info][gc             ]
+  GC(230) Pause Full (G1 Compaction Pause) 499M->251M(500M) 56.235ms
+
+Peak heap usage: 499 MB (99.8% of 500 MB heap)
+GC events: 230+ Full GC events before timeout
+GC pause duration: 56.235ms per Full GC
+Status: Heap exhaustion - continuous Full GC cycles unable to free enough memory
+```
